(library
 (name xsk)
 (public_name xsk)
 (libraries libbpf_c)
 (ocamlopt_flags :standard -O3)
 (c_library_flags :standard -lelf -lz)
 (foreign_stubs
  (language c)
  (include_dirs libbpf_c/libbpf/src libbpf_c/libbpf/include/uapi)
  (flags :standard -Wall -Wextra -Werror -std=gnu11 -O3)
  (names xsk_stubs)))
